Added Skills Section.

--- a/styles/sass/index.scss
+++ b/styles/sass/index.scss
@@ -6,6 +6,7 @@
 @import 'components/button';
 @import 'components/icons';
 @import 'components/cards';
+@import 'components/progressBar';
 
 @import 'layout/navbar';
 @import 'layout/header';
