--- a/styles/sass/sections/_clients.scss
+++ b/styles/sass/sections/_clients.scss
@@ -8,6 +8,15 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        
+        img{
+            // To prevent user from dragging the logos for various browsers
+            -webkit-user-drag: none; 
+            -khtml-user-drag: none; 
+            -moz-user-drag: none; 
+            -o-user-drag: none; 
+        }
+
         & *{margin: 30px;}
         width: 100px;
     }
