--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -105,6 +105,83 @@ section {
   margin-bottom: 20px;
 }
 
+.progressBar {
+  margin-bottom: 26px;
+  margin-bottom: 1.66em;
+}
+
+.progressBar h4 {
+  font-size: 21px;
+  font-size: 1.33em;
+  text-transform: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  margin-bottom: 7px;
+  margin-bottom: 0.33em;
+}
+
+.progressBarContainer {
+  width: 100%;
+  max-width: 350px;
+  height: 26px;
+  height: 1.66em;
+  background: #e6eae3;
+  background: rgba(8, 102, 220, 0.2);
+  overflow: hidden;
+  border-radius: 5px;
+}
+
+.progressBarValue {
+  height: 1.66em;
+  float: left;
+  background: #0866dc;
+  background: rgba(8, 102, 220, 0.75);
+}
+
+.value-00 {
+  width: 0;
+}
+
+.value-10 {
+  width: 10%;
+}
+
+.value-20 {
+  width: 20%;
+}
+
+.value-30 {
+  width: 30%;
+}
+
+.value-40 {
+  width: 40%;
+}
+
+.value-50 {
+  width: 50%;
+}
+
+.value-60 {
+  width: 60%;
+}
+
+.value-70 {
+  width: 70%;
+}
+
+.value-80 {
+  width: 80%;
+}
+
+.value-90 {
+  width: 90%;
+}
+
+.value-100 {
+  width: 100%;
+}
+
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -177,10 +254,6 @@ section {
   color: white;
   background-color: #161B22;
   padding: 10px 200px;
-  position: fixed;
-  width: 100%;
-  bottom: 0;
-  left: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -190,6 +263,10 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.about h1 {
+  font-size: xx-large;
+  text-align: center;
 }
 .about .details {
   text-justify: inter-word;
@@ -224,21 +301,14 @@ section {
   align-items: center;
   width: 100px;
 }
+.clients .clients-imgs img {
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+}
 .clients .clients-imgs * {
   margin: 30px;
-}
-
-.skills {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.skills .details {
-  text-justify: inter-word;
-  max-width: 25%;
-}
-.skills .details p {
-  text-align: justify;
 }
 
 .contact-form {
