--- a/styles/sass/sections/_about.scss
+++ b/styles/sass/sections/_about.scss
@@ -3,6 +3,11 @@
     justify-content: center;
     align-items: center;
 
+    h1{
+        font-size: xx-large;
+        text-align: center;
+    }
+
     .details{
         p{text-align: justify;}
         text-justify: inter-word;
