--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -28,6 +28,10 @@ a:hover {
 section {
   margin-bottom: 100px;
 }
+section h1 {
+  font-size: xx-large;
+  text-align: center;
+}
 
 *, body {
   font-family: "Poppins", sans-serif;
@@ -264,10 +268,6 @@ section {
   justify-content: center;
   align-items: center;
 }
-.about h1 {
-  font-size: xx-large;
-  text-align: center;
-}
 .about .details {
   text-justify: inter-word;
   max-width: 25%;
@@ -309,6 +309,11 @@ section {
 }
 .clients .clients-imgs * {
   margin: 30px;
+}
+
+.skills {
+  margin: auto;
+  width: 25%;
 }
 
 .contact-form {
