Finalizing the design

--- a/styles/sass/base/_base.scss
+++ b/styles/sass/base/_base.scss
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
         
     &::-webkit-scrollbar{display: none;} // hides scroll bar for chrome, safari and opera
     -ms-overflow-style: none;  // IE and Edge 
