--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  scroll-behavior: smooth;
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
@@ -71,6 +72,25 @@ section h1 {
   background-color: #1f2938;
 }
 
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #1F6FEB;
+  color: white;
+  cursor: pointer;
+  padding: 15px 20px;
+  border-radius: 5px;
+}
+#myBtn:hover {
+  background-color: #1258c5;
+}
+
 .empty {
   display: none;
 }
@@ -98,9 +118,9 @@ section h1 {
 }
 .card .card-image {
   border-radius: 5px 5px 0px 0px;
-  background: url(/assets/placeholder.png) no-repeat center;
+  background: url(../../../assets/projects/dbrandIcons.png) no-repeat center;
   background-size: cover;
-  height: 150px;
+  height: 160px;
 }
 .card .card-details {
   padding: 20px;
@@ -109,26 +129,8 @@ section h1 {
   margin-bottom: 20px;
 }
 
-.progressBar {
-  margin-bottom: 26px;
-  margin-bottom: 1.66em;
-}
-
-.progressBar h4 {
-  font-size: 21px;
-  font-size: 1.33em;
-  text-transform: none;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
-  margin-bottom: 7px;
-  margin-bottom: 0.33em;
-}
-
 .progressBarContainer {
-  width: 100%;
-  max-width: 350px;
-  height: 26px;
-  height: 1.66em;
+  width: 350px;
   background: #e6eae3;
   background: rgba(8, 102, 220, 0.2);
   overflow: hidden;
@@ -137,8 +139,6 @@ section h1 {
 
 .progressBarValue {
   height: 1.66em;
-  float: left;
-  background: #0866dc;
   background: rgba(8, 102, 220, 0.75);
 }
 
@@ -267,6 +267,8 @@ section h1 {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 100px;
+  margin-top: 100px;
 }
 .about .details {
   text-justify: inter-word;
@@ -277,10 +279,15 @@ section h1 {
 }
 
 .contact {
+  margin: auto;
+  max-width: 600px;
+}
+.contact h2 {
   text-align: center;
 }
 .contact .social {
   font-size: xx-large;
+  text-align: center;
 }
 .contact .social a {
   color: #bdbdbd;
@@ -312,18 +319,25 @@ section h1 {
 }
 
 .skills {
-  margin: auto;
-  width: 25%;
+  padding: 50px;
+}
+.skills .skills-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
 }
 
-.contact-form {
+.projects .cards {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+  gap: 50px;
 }
+
 .contact-form :not(:last-child) {
-  padding: 10px 100px 10px 20px;
+  padding: 10px 350px 10px 20px;
+  width: 100%;
   margin-bottom: 10px;
   border: 1px solid #0D1117;
   border-radius: 5px;
