--- a/styles/sass/components/_button.scss
+++ b/styles/sass/components/_button.scss
@@ -18,3 +18,23 @@
     border: 1px $primary solid;
     &:hover{background-color: lighten($black, 10%);}
 }
+
+// for the scroll up button
+#myBtn {
+    display: none;
+    position: fixed;
+    
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: $primary;
+    color: white;
+    cursor: pointer;
+    padding: 15px 20px;
+    border-radius: $radius;
+
+    &:hover{background-color: darken($primary, 10%);}
+  }  
