--- a/styles/sass/components/_progressBar.scss
+++ b/styles/sass/components/_progressBar.scss
@@ -1,21 +1,5 @@
-.progressBar {
-    margin-bottom: 26px;
-    margin-bottom: 1.66em;
-  }
-  .progressBar h4 {
-    font-size: 21px;
-    font-size: 1.33em;
-    text-transform: none;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    margin-bottom: 7px;
-    margin-bottom: .33em;
-  }
   .progressBarContainer {
-    width: 100%;
-    max-width: 350px;
-    height: 26px;
-    height: 1.66em;
+    width: 350px;
     background: #e6eae3;
     background: rgba(8,102,220,.2);
     overflow: hidden;
@@ -23,8 +7,6 @@
   }
   .progressBarValue {
     height: 1.66em;
-    float: left;
-    background: #0866dc;
     background: rgba(8,102,220,.75);
   }
   .value-00 { width: 0; }
