--- a/styles/sass/forms/_contact.scss
+++ b/styles/sass/forms/_contact.scss
@@ -1,11 +1,7 @@
 .contact-form{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-
     :not(:last-child){
-     padding: 10px 100px 10px 20px;   
+        padding: 10px 350px 10px 20px;   
+        width: 100%;
         margin-bottom: 10px;
         border: 1px solid $black;
         border-radius: $radius;
