--- a/styles/sass/index.scss
+++ b/styles/sass/index.scss
@@ -16,5 +16,6 @@
 @import 'sections/contact';
 @import 'sections/clients';
 @import 'sections/skills';
+@import 'sections/projects';
 
 @import 'forms/contact';
