--- a/styles/sass/sections/_about.scss
+++ b/styles/sass/sections/_about.scss
@@ -2,6 +2,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 100px;
+
+    margin-top: 100px;
 
     .details{
         p{text-align: justify;}
