--- a/styles/sass/sections/_contact.scss
+++ b/styles/sass/sections/_contact.scss
@@ -1,8 +1,13 @@
 .contact{
-    text-align: center;
+    margin: auto;
+    max-width: 600px;
+    h2{
+        text-align: center;
+    }
     .social{
         a{color: #bdbdbd;}
-        font-size: xx-large;
         a:hover{color: $black;}
+        font-size: xx-large;
+        text-align: center;
     }
 }
