--- a/styles/sass/layout/_header.scss
+++ b/styles/sass/layout/_header.scss
@@ -1,5 +1,6 @@
 .header{    
-    background-color: $black;
+    background: url(../../../assets/illustrations/icons-bg.png), $black;
+
     color: white;
     padding: $space 0 $space 0;
 
