--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -117,8 +117,8 @@ section h1 {
   width: 310px;
 }
 .card .card-image {
+  background: url(../../../assets/projects/spacewalk.png) no-repeat center;
   border-radius: 5px 5px 0px 0px;
-  background: url(../../../assets/projects/dbrandIcons.png) no-repeat center;
   background-size: cover;
   height: 160px;
 }
@@ -128,7 +128,9 @@ section h1 {
 .card .card-details > * {
   margin-bottom: 20px;
 }
-
+.card .one {
+  background: url(../../../assets/projects/dbrandIcons.png) no-repeat center;
+}
 .progressBarContainer {
   width: 350px;
   background: #e6eae3;
@@ -223,7 +225,7 @@ section h1 {
 }
 
 .header {
-  background-color: #0D1117;
+  background: url(../../../assets/illustrations/icons-bg.png), #0D1117;
   color: white;
   padding: 100px 0 100px 0;
 }
@@ -255,12 +257,16 @@ section h1 {
 }
 
 .footer {
+  background: url(../../../assets/illustrations/icons-bg.png);
   color: white;
   background-color: #161B22;
-  padding: 10px 200px;
+  padding: 50px 200px;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.footer a {
+  text-decoration: underline;
 }
 
 .about {
@@ -288,6 +294,7 @@ section h1 {
 .contact .social {
   font-size: xx-large;
   text-align: center;
+  margin-bottom: 100px;
 }
 .contact .social a {
   color: #bdbdbd;
