--- a/styles/sass/layout/_header.scss
+++ b/styles/sass/layout/_header.scss
@@ -2,7 +2,7 @@
     background: url(../../../assets/illustrations/icons-bg.png), $black;
 
     color: white;
-    padding: $space 0 $space 0;
+    padding: 150px 0 150px 0;
 
     .hero-content{
         display: flex;
