--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -192,6 +192,9 @@ section h1 {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: absolute;
+  top: 0;
+  width: 100%;
   background-color: #161B22;
   padding: 10px 200px;
   color: white;
@@ -227,7 +230,7 @@ section h1 {
 .header {
   background: url(../../../assets/illustrations/icons-bg.png), #0D1117;
   color: white;
-  padding: 100px 0 100px 0;
+  padding: 150px 0 150px 0;
 }
 .header .hero-content {
   display: flex;
