--- a/styles/sass/layout/_navbar.scss
+++ b/styles/sass/layout/_navbar.scss
@@ -2,6 +2,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    position: absolute;
+    top: 0;
+    width: 100%;
+
     
     background-color: $blueGray;
     padding: 10px 200px;
